[metadata]
name = pifpaf
home-page = https://github.com/jd/pifpaf
summary = Suite of tools and fixtures to manage daemons for testing
description-file = README.rst
author = Julien Danjou
author-email = julien@danjou.info
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Testing

[extras]
test =
    requests
    testrepository
    testtools
    oslotest
    os-testr

[entry_points]
pifpaf.daemons =
    aodh = pifpaf.drivers.aodh:AodhDriver
    consul = pifpaf.drivers.consul:ConsulDriver
    couchdb = pifpaf.drivers.couchdb:CouchDBDriver
    elasticsearch = pifpaf.drivers.elasticsearch:ElasticsearchDriver
    etcd = pifpaf.drivers.etcd:EtcdDriver
    fakes3 = pifpaf.drivers.fakes3:FakeS3Driver
    ceph = pifpaf.drivers.ceph:CephDriver
    gnocchi = pifpaf.drivers.gnocchi:GnocchiDriver
    keystone = pifpaf.drivers.keystone:KeystoneDriver
    influxdb = pifpaf.drivers.influxdb:InfluxDBDriver
    memcached = pifpaf.drivers.memcached:MemcachedDriver
    mongodb = pifpaf.drivers.mongodb:MongoDBDriver
    mysql = pifpaf.drivers.mysql:MySQLDriver
    postgresql = pifpaf.drivers.postgresql:PostgreSQLDriver
    rabbitmq = pifpaf.drivers.rabbitmq:RabbitMQDriver
    redis = pifpaf.drivers.redis:RedisDriver
    zookeeper = pifpaf.drivers.zookeeper:ZooKeeperDriver

console_scripts =
    pifpaf = pifpaf.__main__:main

[wheel]
universal = 1
