[metadata]
name = pifpaf
home_page = https://github.com/jd/pifpaf
summary = Suite of tools and fixtures to manage daemons for testing
description_file = README.rst
author = Julien Danjou
author_email = julien@danjou.info
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing

[extras]
test =
    requests
    testrepository
    testtools
    os-testr
    mock
gnocchi =
    uwsgi

[files]
packages =
    pifpaf

[entry_points]
pifpaf.daemons =
    aodh = pifpaf.drivers.aodh:AodhDriver
    artemis = pifpaf.drivers.artemis:ArtemisDriver
    consul = pifpaf.drivers.consul:ConsulDriver
    couchdb = pifpaf.drivers.couchdb:CouchDBDriver
    elasticsearch = pifpaf.drivers.elasticsearch:ElasticsearchDriver
    etcd = pifpaf.drivers.etcd:EtcdDriver
    fakes3 = pifpaf.drivers.fakes3:FakeS3Driver
    ceph = pifpaf.drivers.ceph:CephDriver
    gnocchi = pifpaf.drivers.gnocchi:GnocchiDriver
    swift = pifpaf.drivers.swift:SwiftDriver
    keystone = pifpaf.drivers.keystone:KeystoneDriver
    kafka = pifpaf.drivers.kafka:KafkaDriver
    httpbin = pifpaf.drivers.httpbin:HttpBinDriver
    influxdb = pifpaf.drivers.influxdb:InfluxDBDriver
    memcached = pifpaf.drivers.memcached:MemcachedDriver
    mongodb = pifpaf.drivers.mongodb:MongoDBDriver
    mysql = pifpaf.drivers.mysql:MySQLDriver
    postgresql = pifpaf.drivers.postgresql:PostgreSQLDriver
    qdrouterd = pifpaf.drivers.qdrouterd:QdrouterdDriver
    rabbitmq = pifpaf.drivers.rabbitmq:RabbitMQDriver
    redis = pifpaf.drivers.redis:RedisDriver
    s3rver = pifpaf.drivers.s3rver:S3rverDriver
    zookeeper = pifpaf.drivers.zookeeper:ZooKeeperDriver
    vault = pifpaf.drivers.vault:VaultDriver

console_scripts =
    pifpaf = pifpaf.__main__:run_main
